Updated hobbies, added CH flight 18 & X2 flight 2. New navbar on CH/hobbies pages, need to propogate further.

--- a/files/X2_f1.html
+++ b/files/X2_f1.html
@@ -51,14 +51,19 @@
 						href="rocketry.html">Rocketry
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="hpr.html">High Power Solids</a></li>
-								<li style="padding-left: 15px">
-									<a href="charlie_horse.html">Charlie Horse Log</a>
+							<li><a>High Power Solids</a></li>
+								<li class="active" style="padding-left: 15px">
+									<a href="charlie_horse.html">Charlie Horse</a>
 								</li>
 								<li style="padding-left: 15px">
-									<a href="x2_log.html">X2 Log</a>
+									<a href="hawk_log.html">The HAWK</a>
 								</li>
-							<li><a href="liquid_rockets.html">Liquid Engines</a></li>
+								<li style="padding-left: 15px">
+									<a href="flightOn_log.html">Flight On!</a>
+								</li>
+								<li style="padding-left: 15px">
+									<a href="x2_log.html">X2</a>
+								</li>
 							<li><a href="flare.html">Education & Outreach</a></li>
 						</ul>
 					</li>
@@ -67,8 +72,8 @@
 						href="hobbies.html">Other Interests
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
+							<li><a href="hobbies.html#Aviation">Aviation</a></li>
 							<li><a href="hobbies.html#3DPrint">3D Printing</a></li>
-							<li><a href="hobbies.html#Scuba">Scuba Diving</a></li>
 							<li><a href="hobbies.html#USCBand">USC Band</a></li>
 							<li><a href="hobbies.html#Homebrew">Brewing Beer</a></li>
 						</ul>
@@ -89,13 +94,13 @@
 				<div class="col-sm-2">
 				</div>
 				<div class="col-sm-2">
-					<!-- <a class="btn btn-lg btn-info" href="#" role="button">Previous</a> -->
+					<a class="btn btn-lg btn-info" href="X2_f2.html" role="button">Previous</a>
 				</div>
 				<div class="col-sm-4">
 					<h1 style="margin-top: 5px; margin-bottom: 5px">X2 Flight 1</h1>
 				</div>
 				<div class="col-sm-2">
-					<!-- <a class="btn btn-lg btn-info" href="#" role="button">Next</a> -->
+					<a class="btn btn-lg btn-info" href="X2_f2.html" role="button">Next</a>
 				</div>
 				<div class="col-sm-2">
 				</div>
@@ -174,7 +179,7 @@
 	<!-- Footer -->
 	<footer class="footer">
 		<div>
-			<p>&#169; 2020 Keith Yoerg</p>
+			<p>&#169; 2023 Keith Yoerg</p>
 		</div>
 	</footer>
 	
