--- a/files/charlie_horse.html
+++ b/files/charlie_horse.html
@@ -51,14 +51,19 @@
 						href="rocketry.html">Rocketry
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="hpr.html">High Power Solids</a></li>
+							<li><a>High Power Solids</a></li>
 								<li class="active" style="padding-left: 15px">
-									<a href="#">Charlie Horse Log</a>
+									<a href="#">Charlie Horse</a>
 								</li>
 								<li style="padding-left: 15px">
-									<a href="x2_log.html">X2 Log</a>
+									<a href="hawk_log.html">The HAWK</a>
 								</li>
-							<li><a href="liquid_rockets.html">Liquid Engines</a></li>
+								<li style="padding-left: 15px">
+									<a href="flightOn_log.html">Flight On!</a>
+								</li>
+								<li style="padding-left: 15px">
+									<a href="x2_log.html">X2</a>
+								</li>
 							<li><a href="flare.html">Education & Outreach</a></li>
 						</ul>
 					</li>
@@ -67,8 +72,8 @@
 						href="hobbies.html">Other Interests
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
+							<li><a href="hobbies.html#Aviation">Aviation</a></li>
 							<li><a href="hobbies.html#3DPrint">3D Printing</a></li>
-							<li><a href="hobbies.html#Scuba">Scuba Diving</a></li>
 							<li><a href="hobbies.html#USCBand">USC Band</a></li>
 							<li><a href="hobbies.html#Homebrew">Brewing Beer</a></li>
 						</ul>
@@ -97,17 +102,6 @@
 			<li data-target="#myCarousel" data-slide-to="1"></li>
 			<li data-target="#myCarousel" data-slide-to="2"></li>
 			<li data-target="#myCarousel" data-slide-to="3"></li>
-			<li data-target="#myCarousel" data-slide-to="4"></li>
-			<li data-target="#myCarousel" data-slide-to="5"></li>
-			<li data-target="#myCarousel" data-slide-to="6"></li>
-			<li data-target="#myCarousel" data-slide-to="7"></li>
-			<li data-target="#myCarousel" data-slide-to="8"></li>
-			<li data-target="#myCarousel" data-slide-to="9"></li>
-			<li data-target="#myCarousel" data-slide-to="10"></li>
-			<li data-target="#myCarousel" data-slide-to="11"></li>
-			<li data-target="#myCarousel" data-slide-to="12"></li>
-			<li data-target="#myCarousel" data-slide-to="13"></li>
-			<li data-target="#myCarousel" data-slide-to="14"></li>
 		</ol>
 		<!-- Carousel Items -->
 		<div class="carousel-inner" role="listbox">
@@ -120,47 +114,7 @@
 				</div>
 			</div>
 			<div class="item">
-				<img class="second-slide" src="../images/hpr_rockets/charlie_horse/Flight10/CH_F10_pad.gif" alt="Launch 16 GIF">
-				<div class="container">
-					<div class="carousel-caption">
-						<p><a class="btn btn-lg btn-info" href="ch_f16.html" role="button">Flight 16</a></p>
-					</div>
-				</div>
-			</div>
-			<div class="item">
-				<img class="second-slide" src="../images/hpr_rockets/charlie_horse/Flight10/CH_F10_pad.gif" alt="Launch 15 GIF">
-				<div class="container">
-					<div class="carousel-caption">
-						<p><a class="btn btn-lg btn-info" href="ch_f15.html" role="button">Flight 15</a></p>
-					</div>
-				</div>
-			</div>
-			<div class="item">
-				<img class="second-slide" src="../images/hpr_rockets/charlie_horse/Flight10/CH_F10_pad.gif" alt="Launch 14 GIF">
-				<div class="container">
-					<div class="carousel-caption">
-						<p><a class="btn btn-lg btn-info" href="ch_f14.html" role="button">Flight 14</a></p>
-					</div>
-				</div>
-			</div>
-			<div class="item">
-				<img class="second-slide" src="../images/hpr_rockets/charlie_horse/Flight10/CH_F10_pad.gif" alt="Launch 13 GIF">
-				<div class="container">
-					<div class="carousel-caption">
-						<p><a class="btn btn-lg btn-info" href="ch_f13.html" role="button">Flight 13</a></p>
-					</div>
-				</div>
-			</div>
-			<div class="item">
-				<img class="second-slide" src="../images/hpr_rockets/charlie_horse/Flight10/CH_F10_pad.gif" alt="Launch 12 GIF">
-				<div class="container">
-					<div class="carousel-caption">
-						<p><a class="btn btn-lg btn-info" href="ch_f12.html" role="button">Flight 12</a></p>
-					</div>
-				</div>
-			</div>
-			<div class="item">
-				<img class="second-slide" src="../images/hpr_rockets/charlie_horse/Flight10/CH_F10_pad.gif" alt="Launch 11 GIF">
+				<img class="second-slide" src="../images/hpr_rockets/charlie_horse/Flight11/CH_F11_pad.gif" alt="Launch 11 GIF">
 				<div class="container">
 					<div class="carousel-caption">
 						<p><a class="btn btn-lg btn-info" href="ch_f11.html" role="button">Flight 11</a></p>
@@ -168,15 +122,7 @@
 				</div>
 			</div>
 			<div class="item">
-				<img class="second-slide" src="../images/hpr_rockets/charlie_horse/Flight10/CH_F10_pad.gif" alt="Launch 10 GIF">
-				<div class="container">
-					<div class="carousel-caption">
-						<p><a class="btn btn-lg btn-info" href="ch_f10.html" role="button">Flight 10</a></p>
-					</div>
-				</div>
-			</div>
-			<div class="item">
-				<img class="third-slide" src="../images/hpr_rockets/charlie_horse/Flight9/CH_F9_onboard.gif" alt="Launch 9 GIF">
+				<img class="second-slide" src="../images/hpr_rockets/charlie_horse/Flight9/CH_F9_onboard.gif" alt="Launch 9 GIF">
 				<div class="container">
 					<div class="carousel-caption">
 						<p><a class="btn btn-lg btn-info" href="ch_f9.html" role="button">Flight 9</a></p>
@@ -184,66 +130,10 @@
 				</div>
 			</div>
 			<div class="item">
-				<img class="fourth-slide" src="../images/hpr_rockets/charlie_horse/Flight8/CH_F8_pad.gif" alt="Launch 8 GIF">
-				<div class="container">
-					<div class="carousel-caption">
-						<p><a class="btn btn-lg btn-info" href="ch_f8.html" role="button">Flight 8</a></p>
-					</div>
-				</div>
-			</div>
-			<div class="item">
-				<img class="fifth-slide" src="../images/hpr_rockets/charlie_horse/Flight7/CH_F7_pad.gif" alt="Launch 7 GIF">
-				<div class="container">
-					<div class="carousel-caption">
-						<p><a class="btn btn-lg btn-info" href="ch_f7.html" role="button">Flight 7</a></p>
-					</div>
-				</div>
-			</div>
-			<div class="item">
-				<img class="sixth-slide" src="../images/hpr_rockets/charlie_horse/Flight6/CH_F6_pad.gif" alt="Launch 6 GIF">
-				<div class="container">
-					<div class="carousel-caption">
-						<p><a class="btn btn-lg btn-info" href="ch_f6.html" role="button">Flight 6</a></p>
-					</div>
-				</div>
-			</div>
-			<div class="item">
-				<img class="seventh-slide" src="../images/hpr_rockets/charlie_horse/Flight5/CH_F5_pad.gif" alt="Launch 5 GIF">
+				<img class="second-slide" src="../images/hpr_rockets/charlie_horse/Flight5/CH_F5_pad.gif" alt="Launch 5 GIF">
 				<div class="container">
 					<div class="carousel-caption">
 						<p><a class="btn btn-lg btn-info" href="ch_f5.html" role="button">Flight 5</a></p>
-					</div>
-				</div>
-			</div>
-			<div class="item">
-				<img class="eighth-slide" src="../images/hpr_rockets/charlie_horse/Flight4/CH_F4_pad.gif" alt="Launch 4  GIF">
-				<div class="container">
-					<div class="carousel-caption">
-						<p><a class="btn btn-lg btn-info" href="ch_f4.html" role="button">Flight 4</a></p>
-					</div>
-				</div>
-			</div>
-			<div class="item">
-				<img class="ninth-slide" src="../images/hpr_rockets/charlie_horse/Flight3/CH_F3_splash.jpg" alt="Launch 3  GIF">
-				<div class="container">
-					<div class="carousel-caption">
-						<p><a class="btn btn-lg btn-info" href="ch_f3.html" role="button">Flight 3</a></p>
-					</div>
-				</div>
-			</div>
-			<div class="item">
-				<img class="tenth-slide" src="../images/hpr_rockets/charlie_horse/Flight2/CH_F2_splash.jpg" alt="Launch 2  GIF">
-				<div class="container">
-					<div class="carousel-caption">
-						<p><a class="btn btn-lg btn-info" href="ch_f2.html" role="button">Flight 2</a></p>
-					</div>
-				</div>
-			</div>
-			<div class="item">
-				<img class="eleventh-slide" src="../images/hpr_rockets/charlie_horse/Flight1/CH_F1_splash.jpg" alt="Launch 1  GIF">
-				<div class="container">
-					<div class="carousel-caption">
-						<p><a class="btn btn-lg btn-info" href="ch_f1.html" role="button">Flight 1</a></p>
 					</div>
 				</div>
 			</div>
@@ -262,8 +152,16 @@
 	<!-- "Featurette" Section -->
 	<div class="container marketing">
 		<hr class="featurette-divider" id="Charlie">
-		<h2 class="featurette-heading">Summary</h2>
-		<p class="lead">Click buttons above or links below for detailed info</p>
+		<h3 class="featurette-heading">Charlie's Story</h2>
+		<p>I initially built this rocket in 2016 from a Madcow Torrent kit and dubbed it 
+		"Charlie Horse." The rocket's maiden voyage was in August of that year and earned 
+		me a Tripoli Level 1 certification. Charlie Horse has flown nearly 20 times to date 
+		and has carried various payloads including a camera, GPS trackers, and a Charlie 
+		Brown figurine (who has been on every flight).</p>
+		<p>More details from each flight including data plots, photos, and videos are available 
+		in the links below. A dramatic video made from footage of Charlie Horse's 10th flight is 
+		available <a href="ch_f10.html#Photos">here</a>.</p>
+		<p class="lead"></p>
 		<div class="row featurette">
 			<div class="table-responsive">
 			<table class="table">
@@ -279,6 +177,15 @@
 				</tr>
 				</thead>
 				<tbody>
+				<tr>
+				  <th scope="row">18</th>
+				  <td>10/14/2023</td>
+				  <td>CTI I350-SS</td>
+				  <td><a href="https://rocstock.org/" target="_blank">ROC</a></td>
+				  <td>3,282</td>
+				  <td>0.52</td>
+				  <td><a href="ch_f18.html">Report & Photos</a></td>
+				</tr>
 				<tr>
 				  <th scope="row">17</th>
 				  <td>6/17/2023</td>
@@ -446,7 +353,7 @@
 	<!-- Footer -->
 	<footer class="footer">
 		<div>
-			<p>&#169; 2020 Keith Yoerg</p>
+			<p>&#169; 2023 Keith Yoerg</p>
 		</div>
 	</footer>
 	
