--- a/files/x2_log.html
+++ b/files/x2_log.html
@@ -51,14 +51,19 @@
 						href="rocketry.html">Rocketry
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="hpr.html">High Power Solids</a></li>
-								<li style="padding-left: 15px">
-									<a href="charlie_horse.html">Charlie Horse Log</a>
-								</li>
+							<li><a>High Power Solids</a></li>
 								<li class="active" style="padding-left: 15px">
-									<a href="#">X2 Log</a>
+									<a href="charlie_horse.html">Charlie Horse</a>
 								</li>
-							<li><a href="liquid_rockets.html">Liquid Engines</a></li>
+								<li style="padding-left: 15px">
+									<a href="hawk_log.html">The HAWK</a>
+								</li>
+								<li style="padding-left: 15px">
+									<a href="flightOn_log.html">Flight On!</a>
+								</li>
+								<li style="padding-left: 15px">
+									<a href="#">X2</a>
+								</li>
 							<li><a href="flare.html">Education & Outreach</a></li>
 						</ul>
 					</li>
@@ -67,8 +72,8 @@
 						href="hobbies.html">Other Interests
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
+							<li><a href="hobbies.html#Aviation">Aviation</a></li>
 							<li><a href="hobbies.html#3DPrint">3D Printing</a></li>
-							<li><a href="hobbies.html#Scuba">Scuba Diving</a></li>
 							<li><a href="hobbies.html#USCBand">USC Band</a></li>
 							<li><a href="hobbies.html#Homebrew">Brewing Beer</a></li>
 						</ul>
@@ -94,6 +99,7 @@
 		<!-- Indicators -->
 		<ol class="carousel-indicators">
 			<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+			<li data-target="#myCarousel" data-slide-to="1"></li>
 		</ol>
 		<!-- Carousel Items -->
 		<div class="carousel-inner" role="listbox">
@@ -102,6 +108,14 @@
 				<div class="container">
 					<div class="carousel-caption">
 						<p><a class="btn btn-lg btn-info" href="X2_f1.html" role="button">Flight 1</a></p>
+					</div>
+				</div>
+			</div>
+			<div class="item">
+				<img class="second-slide" src="../images/hpr_rockets/X2/Flight2/X2_F2_photo2.jpg" alt="Launch 2 GIF">
+				<div class="container">
+					<div class="carousel-caption">
+						<p><a class="btn btn-lg btn-info" href="X2_f2.html" role="button">Flight 2</a></p>
 					</div>
 				</div>
 			</div>
@@ -138,6 +152,15 @@
 				</tr>
 				</thead>
 				<tbody>
+				<tr>
+				  <th scope="row">2</th>
+				  <td>6/10/2022</td>
+				  <td>CTI J520-Skid</td>
+				  <td><a href="https://rocstock.org/" target="_blank">ROC</a></td>
+				  <td>4,724</td>
+				  <td>0.81</td>
+				  <td><a href="X2_f2.html">Report & Photos</a></td>
+				</tr>
 				<tr>
 				  <th scope="row">1</th>
 				  <td>11/7/2020</td>
