--- a/files/hobbies.html
+++ b/files/hobbies.html
@@ -101,18 +101,18 @@
 		<!-- Carousel Items -->
 		<div class="carousel-inner" role="listbox">
 			<div class="item active">
-				<img class="first-slide" src="../images/benchy.jpg" alt="3D Printed Items">
+				<img class="first-slide" src="../images/pipistrel.jpg" alt="Keith Flying">
 				<div class="container">
 					<div class="carousel-caption">
-						<p><a class="btn btn-lg btn-info" href="#3DPrint" role="button">3D Printing</a></p>
+						<p><a class="btn btn-lg btn-info" href="#Aviation" role="button">Aviation</a></p>
 					</div>
 				</div>
 			</div>
 			<div class="item">
-				<img class="second-slide" src="../images/keith_scuba.png" alt="Keith Scuba Diving">
+				<img class="second-slide" src="../images/benchy.jpg" alt="3D Printed Items">
 				<div class="container">
 					<div class="carousel-caption">
-						<p><a class="btn btn-lg btn-info" href="#Scuba" role="button">Scuba Diving</a></p>
+						<p><a class="btn btn-lg btn-info" href="#3DPrint" role="button">3D Printing</a></p>
 					</div>
 				</div>
 			</div>
@@ -146,17 +146,35 @@
 	
 	<!-- "Featurette" Section -->
 	<div class="container marketing">
-		<hr class="featurette-divider" id="3DPrint">
-		<h2 class="featurette-heading">3D Printer</h2>
-		<p class="lead">Playing with Plastic</p>
+		<hr class="featurette-divider" id="Aviation">
+		<h2 class="featurette-heading">Aviation</h2>
+		<p class="lead">Taking Flight</p>
 		<div class="row featurette">
 			<div class="col-md-5 col-md-push-7">
-				<img class="featurette-image img-responsive center-block" src="../images/3d_printer.jpg"
+				<img class="featurette-image img-responsive center-block" src="../images/flying.jpg"
 				alt="Keith's 3D Printer">
 			<p></p>
 			</div>
 			<div class="col-md-7 col-md-pull-5">
 			<p></p>
+				<p>The summer of 2012 I lived in Ames, Iowa for several months and took flying 
+				lessons from a family friend, ultimately earning my private pilots license. I 
+				am currently VFR certified and hope to work towards an IFR rating in the near future.
+				The majority of my initial flying was in untowered airspace in a Cessna 172. In 2018 
+				I flew the first commercially available all-electric aircraft in the US, a Pipistrel 
+				Alpha.</p>
+				<p>After a haitus focusing on other personal projects, I eventually decided to 
+				regain my currency and get back into flying more regularly. Now, I fly a Piper 
+				PA28-140 Cherokee out of the Compton Airport and like to travel around the LA area 
+				and explore new airports and airspace.</p>
+			</div>
+		</div>
+
+		<hr class="featurette-divider" id="3DPrint">
+		<div class="row featurette">
+			<div class="col-md-7 col-md-push-5">
+				<h2 class="featurette-heading">3D Printing</h2>
+				<p class="lead">Playing with Plastic</p>
 				<p>A few years ago a friend gave me an unopened, build-it yourself 3D printer 
 				that had been collecting dust in his garage. It was an Anet A8, and he informed 
 				me immediately that I would need to update the frame to extruded aluminum, among 
@@ -169,22 +187,9 @@
 				browser. A connected camera and LED strip lighting allow remote monitoring and 
 				timelapse videos.</p>
 			</div>
-		</div>
-
-		<hr class="featurette-divider" id="Scuba">
-		<div class="row featurette">
-			<div class="col-md-7 col-md-push-5">
-				<h2 class="featurette-heading">Scuba Diving</h2>
-				<p class="lead">Get Low</p>
-				<p>In March of 2020 I took classes to earn my open water scuba certification The idea was to take 
-				a trip to Austrailia to dive the Great Barrier Reef the following month. Unfortunately, 2020 had 
-				other ideas, and my overseas excursion had to be postponed.</p>
-				<p>While I'm still a beginner, I hope to log many more hours under the sea in the coming year as 
-				 I wait to reschedule my Australia trip.</p>
-			</div>
 			<div class="col-md-5 col-md-pull-7">
-				<img class="featurette-image img-responsive center-block" src="../images/scuba.gif"
-				alt="Keith Biking in the Door County triathlon">
+				<img class="featurette-image img-responsive center-block" src="../images/3d_printer.jpg"
+				alt="Keith's 3D Printer">
 			</div>
 		</div>
 		
@@ -245,7 +250,7 @@
 	<!-- Footer -->
 	<footer class="footer">
 		<div>
-			<p>&#169; 2020 Keith Yoerg</p>
+			<p>&#169; 2023 Keith Yoerg</p>
 		</div>
 	</footer>
 	
