Updates to text descriptions and photos of Charlie Horse launches 15-18.

--- a/files/ch_f15.html
+++ b/files/ch_f15.html
@@ -119,18 +119,17 @@
 			</div>
 			<div class="col-md-7 col-md-pull-5">
 			<p><p/>
-				<p>Flight #11 was conducted at the <a href="http://www.rrs.org/" target="_blank" data-toggle="tooltip" title="www.rrs.org">
-				Reaction Research Society</a> Mojave Test Area launch site. The launch was documented by a pad-side Go Pro camera and
-				an onboard camera (which was lost in flight), and cell phone footage recorded on Keith's phone by RRS member Wolfram
-				Blume.</p>
-				<p>The payload bay carried a Charlie Brown figurine that has flown on every flight, a Stratologger CF dual deployment 
-				flight computer, and was the first flight with the Lynq real-time GPS distance & direction trackers. The GPS signal is 
-				sent from the carabiner-style module in the rocket to an identical one on the ground. The module inside the rocket was 
-				covered in painter's tape to protect it from the hot exhaust gases of the ejection charge.</p>
-				<p>The flight was a success, and was my first flight over Mach 1.0! Unfortunately, the onboard camera was lost in 
-				flight. I have flown the camera many times before without issue, so I suspect the mach transition caused too much 
-				drag for it to hold on. The Lynq trackers were a resounding success, and made tracking the rocket 0.75 miles away 
-				very easy.</p>
+				<p>Flight #15 was conducted at the <a href="https://rocstock.org/" target="_blank">Lucerne Dry Lake</a></td> 
+				launch site. A Go Pro camera was set up to take video beside the launch pad. The launch was documented by a 
+				pad-side Go Pro camera and a cell phone video from the spectator area. The launch took place during the Tripoli 
+				LDRS 40 event hosted by ROC, where an ice cream truck even made an appearance!</p>
+				<p>The payload bay carried a Charlie Brown figurine that has flown on every flight and a Stratologger CF dual 
+				deployment flight computer which performed as expected and without issues.</p>
+				<p>Dimitri Timohovich attendend the launch event as well, and was a great help assisting in setup and recovery 
+				from the launch. The flight itself went quite well, the repairs to the fin damage from the previous flight 
+				were sufficient and the rocket weather-cocked into the wind quite well, flying straight otherwise. This was my 
+				second high-power launch of the LDRS 40 event, with the 2nd ever flight of the <a href="X2_f2.html">X2</a> 
+				happening the day before.</p>
 			</div>
 		</div>
 		<hr class="featurette-divider">
@@ -147,7 +146,7 @@
 				<div style="max-width:900px; margin: 0 auto">
 					<div class="embed-responsive embed-responsive-16by9">
 					<video controls allowfullscreen>
-						<source src="../images/hpr_rockets/charlie_horse/Flight11/CH_F11_pad.mov">
+						<source src="../images/hpr_rockets/charlie_horse/Flight15/CH_F15_Pad.mp4">
 					</video>
 					</div>
 				</div>
@@ -156,17 +155,17 @@
 				<div style="max-width:900px; margin: 0 auto">
 					<div class="embed-responsive embed-responsive-16by9">
 					<video controls allowfullscreen>
-						<source src="../images/hpr_rockets/charlie_horse/Flight11/CH_F11_spectator.mp4">
+						<source src="../images/hpr_rockets/charlie_horse/Flight15/CH_F15_spectator.mp4">
 					</video>
 					</div>
 				</div>
 			</div>
 			<div class="item">
-				<img class="third-slide" src="../images/hpr_rockets/charlie_horse/Flight11/lynq_gps.jpg" 
+				<img class="third-slide" src="../images/hpr_rockets/charlie_horse/Flight15/CH_F15_photo2.jpg" 
 					alt="Photo of Lynq GPS module being installed in Charlie Horse">
 			</div>
 			<div class="item">
-				<img class="fourth-slide" src="../images/hpr_rockets/charlie_horse/Flight11/recovery.jpg" 
+				<img class="fourth-slide" src="../images/hpr_rockets/charlie_horse/Flight15/CH_F15_photo3.jpg" 
 					alt="Photo of Charlie Horse's landing site">
 			</div>
 		</div>
