--- a/files/ch_f18.html
+++ b/files/ch_f18.html
@@ -147,7 +147,7 @@
 				<div style="max-width:900px; margin: 0 auto">
 					<div class="embed-responsive embed-responsive-16by9">
 					<video controls allowfullscreen>
-						<source src="../images/hpr_rockets/charlie_horse/Flight11/CH_F11_pad.mov">
+						<source src="../images/hpr_rockets/charlie_horse/Flight18/CH_F18_pad.mov">
 					</video>
 					</div>
 				</div>
@@ -156,17 +156,25 @@
 				<div style="max-width:900px; margin: 0 auto">
 					<div class="embed-responsive embed-responsive-16by9">
 					<video controls allowfullscreen>
-						<source src="../images/hpr_rockets/charlie_horse/Flight11/CH_F11_spectator.mp4">
+						<source src="../images/hpr_rockets/charlie_horse/Flight18/CH_F18_spectator.mp4">
 					</video>
 					</div>
 				</div>
 			</div>
 			<div class="item">
-				<img class="third-slide" src="../images/hpr_rockets/charlie_horse/Flight11/lynq_gps.jpg" 
+				<img class="third-slide" src="../images/hpr_rockets/charlie_horse/Flight18/CH_F18_photo1.jpg" 
 					alt="Photo of Lynq GPS module being installed in Charlie Horse">
 			</div>
 			<div class="item">
-				<img class="fourth-slide" src="../images/hpr_rockets/charlie_horse/Flight11/recovery.jpg" 
+				<img class="fourth-slide" src="../images/hpr_rockets/charlie_horse/Flight18/CH_F18_photo2.jpg" 
+					alt="Photo of Charlie Horse's landing site">
+			</div>
+			<div class="item">
+				<img class="fifth-slide" src="../images/hpr_rockets/charlie_horse/Flight18/CH_F18_photo3.jpg" 
+					alt="Photo of Charlie Horse's landing site">
+			</div>
+			<div class="item">
+				<img class="sixth-slide" src="../images/hpr_rockets/charlie_horse/Flight18/CH_F18_photo4.jpg" 
 					alt="Photo of Charlie Horse's landing site">
 			</div>
 		</div>
