--- a/files/ch_f17.html
+++ b/files/ch_f17.html
@@ -119,18 +119,16 @@
 			</div>
 			<div class="col-md-7 col-md-pull-5">
 			<p><p/>
-				<p>Flight #11 was conducted at the <a href="http://www.rrs.org/" target="_blank" data-toggle="tooltip" title="www.rrs.org">
-				Reaction Research Society</a> Mojave Test Area launch site. The launch was documented by a pad-side Go Pro camera and
-				an onboard camera (which was lost in flight), and cell phone footage recorded on Keith's phone by RRS member Wolfram
-				Blume.</p>
-				<p>The payload bay carried a Charlie Brown figurine that has flown on every flight, a Stratologger CF dual deployment 
-				flight computer, and was the first flight with the Lynq real-time GPS distance & direction trackers. The GPS signal is 
-				sent from the carabiner-style module in the rocket to an identical one on the ground. The module inside the rocket was 
-				covered in painter's tape to protect it from the hot exhaust gases of the ejection charge.</p>
-				<p>The flight was a success, and was my first flight over Mach 1.0! Unfortunately, the onboard camera was lost in 
-				flight. I have flown the camera many times before without issue, so I suspect the mach transition caused too much 
-				drag for it to hold on. The Lynq trackers were a resounding success, and made tracking the rocket 0.75 miles away 
-				very easy.</p>
+				<p>Flight #17 was conducted at the <a href="https://friendsofamateurrocketry.org/" target="_blank">Friends of 
+				Amateur Rocketry</a> (FAR) launch site in the Mojave desert. The launch was documented by a pad-side Go Pro 
+				camera and a cell phone video from the spectator area. It was the first flight of a rocket motor that I 
+				designed and manufactured myself, taking place on a classically hot summer day in the desert.</p>
+				<p>The payload bay carried a Charlie Brown figurine that has flown on every flight and a Stratologger CF dual 
+				deployment flight computer which performed as expected and without issues.</p>
+				<p>The flight was a great success, and was the first rocket I've flown on a motor of my own design! The motor 
+				was a 38mm, 5-grain "wimpy red" motor which uses PBAN as the binder and gets its distinctive red flame color 
+				from the iron oxide added to the mix. The rocket was recovered without damage from the desert nearby the launch 
+				site.</p>
 			</div>
 		</div>
 		<hr class="featurette-divider">
@@ -147,7 +145,7 @@
 				<div style="max-width:900px; margin: 0 auto">
 					<div class="embed-responsive embed-responsive-16by9">
 					<video controls allowfullscreen>
-						<source src="../images/hpr_rockets/charlie_horse/Flight11/CH_F11_pad.mov">
+						<source src="../images/hpr_rockets/charlie_horse/Flight17/CH_F17_pad.mov">
 					</video>
 					</div>
 				</div>
@@ -156,17 +154,17 @@
 				<div style="max-width:900px; margin: 0 auto">
 					<div class="embed-responsive embed-responsive-16by9">
 					<video controls allowfullscreen>
-						<source src="../images/hpr_rockets/charlie_horse/Flight11/CH_F11_spectator.mp4">
+						<source src="../images/hpr_rockets/charlie_horse/Flight17/CH_F17_spectator.mp4">
 					</video>
 					</div>
 				</div>
 			</div>
 			<div class="item">
-				<img class="third-slide" src="../images/hpr_rockets/charlie_horse/Flight11/lynq_gps.jpg" 
+				<img class="third-slide" src="../images/hpr_rockets/charlie_horse/Flight17/CH_F17_photo1.jpg" 
 					alt="Photo of Lynq GPS module being installed in Charlie Horse">
 			</div>
 			<div class="item">
-				<img class="fourth-slide" src="../images/hpr_rockets/charlie_horse/Flight11/recovery.jpg" 
+				<img class="fourth-slide" src="../images/hpr_rockets/charlie_horse/Flight17/CH_F17_photo2.jpg" 
 					alt="Photo of Charlie Horse's landing site">
 			</div>
 		</div>
