Updates to Charlie Horse launch log table formatting.

--- a/files/charlie_horse.html
+++ b/files/charlie_horse.html
@@ -160,7 +160,8 @@
 		Brown figurine (who has been on every flight).</p>
 		<p>More details from each flight including data plots, photos, and videos are available 
 		in the links below. A dramatic video made from footage of Charlie Horse's 10th flight is 
-		available <a href="ch_f10.html#Photos">here</a>.</p>
+		available <a href="ch_f10.html#Photos">here</a>, and a description and photos of each 
+		flight can be accessed by clicking on the links in the Launch # column below.</p>
 		<p class="lead"></p>
 		<div class="row featurette">
 			<div class="table-responsive">
@@ -173,171 +174,152 @@
 				  <th scope="col">Location</th>
 				  <th scope="col">Max Alt (ft)</th>
 				  <th scope="col">Mach</th>
-				  <th scope="col">More Info</th>
 				</tr>
 				</thead>
 				<tbody>
 				<tr>
-				  <th scope="row">18</th>
+				  <th scope="row"><a href="ch_f18.html">18<a/></th>
 				  <td>10/14/2023</td>
 				  <td>CTI I350-SS</td>
 				  <td><a href="https://rocstock.org/" target="_blank">ROC</a></td>
 				  <td>3,282</td>
 				  <td>0.52</td>
-				  <td><a href="ch_f18.html">Report & Photos</a></td>
 				</tr>
 				<tr>
-				  <th scope="row">17</th>
+				  <th scope="row"><a href="ch_f17.html">17</a></th>
 				  <td>6/17/2023</td>
 				  <td>Yoerg I3xx-Red</td>
 				  <td><a href="https://friendsofamateurrocketry.org/" target="_blank">FAR</a></td>
 				  <td>2,820</td>
 				  <td>0.42</td>
-				  <td><a href="ch_f17.html">Report & Photos</a></td>
 				</tr>
 				<tr>
-				  <th scope="row">16</th>
+				  <th scope="row"><a href="ch_f16.html">16</a></th>
 				  <td>6/4/2023</td>
 				  <td>Newman I117-Everclear</td>
 				  <td><a href="https://friendsofamateurrocketry.org/" target="_blank">FAR</a></td>
 				  <td>2,108</td>
 				  <td>0.34</td>
-				  <td><a href="ch_f16.html">Report & Photos</a></td>
 				</tr>
 				<tr>
-				  <th scope="row">15</th>
+				  <th scope="row"><a href="ch_f15.html">15</a></th>
 				  <td>6/11/2022</td>
 				  <td>CTI J285-Classic</td>
 				  <td><a href="https://rocstock.org/" target="_blank">ROC</a></td>
 				  <td>3,541</td>
 				  <td>0.51</td>
-				  <td><a href="ch_f15.html">Report & Photos</a></td>
 				</tr>
 				<tr>
-				  <th scope="row">14</th>
+				  <th scope="row"><a href="ch_f14.html">14</a></th>
 				  <td>4/9/2022</td>
 				  <td>CTI J255-RL</td>
 				  <td><a href="https://rocstock.org/" target="_blank">ROC</a></td>
 				  <td>3,112</td>
 				  <td>0.47</td>
-				  <td><a href="ch_f14.html">Report & Photos</a></td>
 				</tr>
 				<tr>
-				  <th scope="row">13</th>
+				  <th scope="row"><a href="ch_f13.html">13</a></th>
 				  <td>3/12/2022</td>
 				  <td>CTI J520-SK</td>
 				  <td><a href="http://www.rrs.org/facilities/" target="_blank">MTA</a></td>
 				  <td>4,629</td>
 				  <td>0.84</td>
-				  <td><a href="ch_f13.html">Report & Photos</a></td>
 				</tr>
 				<tr>
-				  <th scope="row">12</th>
+				  <th scope="row"><a href="ch_f12.html">12</a></th>
 				  <td>4/10/2021</td>
 				  <td>CTI I280-SS</td>
 				  <td><a href="http://www.rrs.org/facilities/" target="_blank">MTA</a></td>
 				  <td>2,361</td>
 				  <td>0.37</td>
-				  <td><a href="ch_f12.html">Report & Photos</a></td>
 				</tr>
 				<tr>
-				  <th scope="row">11</th>
+				  <th scope="row"><a href="ch_f11.html">11</a></th>
 				  <td>11/7/2020</td>
 				  <td>CTI J520-SK</td>
 				  <td><a href="http://www.rrs.org/facilities/" target="_blank">MTA</a></td>
 				  <td>4,547</td>
 				  <td>1.04</td>
-				  <td><a href="ch_f11.html">Report & Photos</a></td>
 				</tr>
 				<tr>
-				  <th scope="row">10</th>
+				  <th scope="row"><a href="ch_f10.html">10</a></th>
 				  <td>3/1/2020</td>
 				  <td>CTI I350-SS</td>
 				  <td><a href="http://www.rrs.org/facilities/" target="_blank">MTA</a></td>
 				  <td>2,893</td>
 				  <td>0.50</td>
-				  <td><a href="ch_f10.html">Report & Photos</a></td>
 				</tr>
 				<tr>
-				  <th scope="row">9</th>
+				  <th scope="row"><a href="ch_f9.html">9</a></th>
 				  <td>2/8/2020</td>
 				  <td>CTI J520-SK</td>
 				  <td><a href="https://rocstock.org/" target="_blank">ROC</a></td>
 				  <td>4,613</td>
 				  <td>0.72</td>
-				  <td><a href="ch_f9.html">Report & Photos</a></td>
 				</tr>
 				<tr>
-				  <th scope="row">8</th>
+				  <th scope="row"><a href="ch_f8.html">8</a></th>
 				  <td>1/18/2020</td>
 				  <td>AT I280-DM</td>
 				  <td><a href="http://www.rrs.org/facilities/" target="_blank">MTA</a></td>
 				  <td>3,432</td>
 				  <td>0.63</td>
-				  <td><a href="ch_f8.html">Report & Photos</a></td>
 				</tr>
 				<tr>
-				  <th scope="row">7</th>
+				  <th scope="row"><a href="ch_f7.html">7</a></th>
 				  <td>8/10/2019</td>
 				  <td>AT J425-R</td>
 				  <td><a href="https://rocstock.org/" target="_blank">ROC</a></td>
 				  <td>3,649</td>
 				  <td>0.63</td>
-				  <td><a href="ch_f7.html">Report & Photos</a></td>
 				</tr>
 				<tr>
-				  <th scope="row">6</th>
+				  <th scope="row"><a href="ch_f6.html">6</a></th>
 				  <td>7/20/2019</td>
 				  <td>AT J435-WS</td>
 				  <td><a href="https://rocstock.org/" target="_blank">ROC</a></td>
 				  <td>4,258</td>
 				  <td>0.67</td>
-				  <td><a href="ch_f6.html">Report & Photos</a></td>
 				</tr>
 				<tr>
-				  <th scope="row">5</th>
+				  <th scope="row"><a href="ch_f5.html">5</a></th>
 				  <td>6/8/2019</td>
 				  <td>CTI J520-SK</td>
 				  <td><a href="https://rocstock.org/" target="_blank">ROC</a></td>
 				  <td>4,642</td>
 				  <td>0.89</td>
-				  <td><a href="ch_f5.html">Report & Photos</a></td>
 				</tr>
 				<tr>
-				  <th scope="row">4</th>
+				  <th scope="row"><a href="ch_f4.html">4</a></th>
 				  <td>6/8/2019</td>
 				  <td>AT J425-R</td>
 				  <td><a href="https://rocstock.org/" target="_blank">ROC</a></td>
 				  <td>3,948</td>
 				  <td>0.69</td>
-				  <td><a href="ch_f4.html">Report & Photos</a></td>
 				</tr>
 				<tr>
-				  <th scope="row">3</th>
+				  <th scope="row"><a href="ch_f3.html">3</a></th>
 				  <td>6/11/2017</td>
 				  <td>CTI J381-SK</td>
 				  <td><a href="https://rocstock.org/" target="_blank">ROC</a></td>
 				  <td>3,514</td>
 				  <td>0.59</td>
-				  <td><a href="ch_f3.html">Report & Photos</a></td>
 				</tr>
 				<tr>
-				  <th scope="row">2</th>
+				  <th scope="row"><a href="ch_f2.html">2</a></th>
 				  <td>???</td>
 				  <td>CTI I540-WT</td>
 				  <td><a href="https://rocstock.org/" target="_blank">ROC</a></td>
 				  <td>No Logger</td>
 				  <td>No Logger</td>
-				  <td><a href="ch_f2.html">Report & Photos</a></td>
 				</tr>
 				<tr>
-				  <th scope="row">1</th>
+				  <th scope="row"><a href="ch_f1.html">1</a></th>
 				  <td>8/13/2016</td>
 				  <td>CTI I255-RL</td>
 				  <td><a href="https://rocstock.org/" target="_blank">ROC</a></td>
 				  <td>No Logger</td>
 				  <td>No Logger</td>
-				  <td><a href="ch_f1.html">Report & Photos</a></td>
 				</tr>
 				</tbody>
 			</table>
