--- a/files/ch_f14.html
+++ b/files/ch_f14.html
@@ -148,7 +148,7 @@
 				<div style="max-width:900px; margin: 0 auto">
 					<div class="embed-responsive embed-responsive-16by9">
 					<video controls allowfullscreen>
-						<source src="../images/hpr_rockets/charlie_horse/Flight14/CH_F14_pad.mov">
+						<source src="../images/hpr_rockets/charlie_horse/Flight14/CH_F14_pad.mp4">
 					</video>
 					</div>
 				</div>
